[gd_scene load_steps=10 format=3 uid="uid://01u3cti70ykv"]

[ext_resource type="Texture2D" uid="uid://smgarqhrhkfc" path="res://graphics/ui/store/background.png" id="1_ssfmf"]
[ext_resource type="Script" path="res://scenes/game/boss_stages/boss_stage1/boss_tigmu12.gd" id="1_v8oh5"]
[ext_resource type="Texture2D" uid="uid://drwpnrffbmssh" path="res://graphics/boss_stage/Assets/2x/tigmuQ_lbl@2x.png" id="2_dtoxy"]
[ext_resource type="Texture2D" uid="uid://b5pjo2ofl1vf7" path="res://graphics/boss_stage/Assets/2x/tigmuTitle_1@2x.png" id="3_sa6yq"]
[ext_resource type="FontFile" uid="uid://cj1ai2aqjg7ro" path="res://themes/assets/MochiyPopOne-Regular.ttf" id="4_xhik4"]
[ext_resource type="FontFile" uid="uid://ityft2yjuchc" path="res://themes/assets/Berlin Sans FB Demi Bold.ttf" id="6_u53w8"]
[ext_resource type="Theme" uid="uid://0yb6q8sbxsbh" path="res://themes/boss_tigmu12.tres" id="7_y7e3q"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_72xq4"]
texture = ExtResource("2_dtoxy")

[sub_resource type="Theme" id="Theme_ybrnr"]
Label/styles/normal = SubResource("StyleBoxTexture_72xq4")

[node name="BossTigmu12" type="CanvasLayer"]
script = ExtResource("1_v8oh5")

[node name="Background" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 221.0
offset_right = 3.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("1_ssfmf")
expand_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(749, 186.75)
scale = Vector2(0.941176, 1.12105)
texture = ExtResource("3_sa6yq")

[node name="Title_lbl" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.512177
anchor_top = 0.185135
anchor_right = 0.658295
anchor_bottom = 0.260811
offset_left = -19.0
offset_top = 35.0
offset_right = -18.999
offset_bottom = 35.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_u53w8")
theme_override_font_sizes/font_size = 32
text = "Tigmo-Tigmo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestionLbl" type="Label" parent="."]
custom_minimum_size = Vector2(450, 300)
offset_left = 523.0
offset_top = 240.0
offset_right = 973.0
offset_bottom = 540.0
size_flags_horizontal = 4
theme = SubResource("Theme_ybrnr")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_xhik4")
theme_override_font_sizes/font_size = 22
text = "Tungod sa akong kahayag,
Puno'g katahum ug dayag,
Mamilig kalingkuran sa ulo.
Kinsa man ako?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Choices" type="Node2D" parent="."]

[node name="ChoiceLbl1" type="Label" parent="Choices"]
custom_minimum_size = Vector2(200, 100)
offset_left = 318.0
offset_top = 542.0
offset_right = 518.0
offset_bottom = 642.0
mouse_filter = 0
theme = ExtResource("7_y7e3q")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_xhik4")
theme_override_font_sizes/font_size = 24
text = "Kwintas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChoiceLbl2" type="Label" parent="Choices"]
custom_minimum_size = Vector2(200, 100)
offset_left = 538.0
offset_top = 542.0
offset_right = 738.0
offset_bottom = 642.0
mouse_filter = 0
theme = ExtResource("7_y7e3q")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_xhik4")
theme_override_font_sizes/font_size = 24
text = "Korona"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChoiceLbl3" type="Label" parent="Choices"]
custom_minimum_size = Vector2(200, 100)
offset_left = 758.0
offset_top = 542.0
offset_right = 958.0
offset_bottom = 642.0
mouse_filter = 0
theme = ExtResource("7_y7e3q")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_xhik4")
theme_override_font_sizes/font_size = 24
text = "Lampara"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChoiceLbl4" type="Label" parent="Choices"]
custom_minimum_size = Vector2(200, 100)
offset_left = 978.0
offset_top = 542.0
offset_right = 1178.0
offset_bottom = 642.0
mouse_filter = 0
theme = ExtResource("7_y7e3q")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_xhik4")
theme_override_font_sizes/font_size = 24
text = "Kalo"
horizontal_alignment = 1
vertical_alignment = 1
